--- a/index.html
+++ b/index.html
@@ -87,9 +87,213 @@
         <div id="traffic"></div>
         <div id="daily-traffic"></div>
         <div id="mobile-users"></div>
-        <div id="social-stats"></div>
-        <div id="new-members"></div>
-        <div id="recent-activity"></div>
+
+        <div id="social-stats">
+          <!-- <h2>SOCIAL STATS</h2>
+          <div class="container-social"> -->
+          <div id="twitter" class="social-media">
+            <svg
+              class="media-svg"
+              height="60"
+              width="60"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g transform="scale(0.75)">
+                <circle cx="40" cy="40" r="40" />
+                <path
+                  transform="translate(20 24) scale(1.25)"
+                  fill="red"
+                  d="M32 3.1c-1.2.5-2.4.9-3.8 1 1.4-.8 2.4-2.1 2.9-3.6-1.3.8-2.7 1.3-4.2 1.6C25.8.8 24 0 22.2 0c-3.6 0-6.6 2.9-6.6 6.6 0 .5.1 1 .2 1.5-5.5-.3-10.3-2.9-13.6-6.9-.6 1-.9 2.1-.9 3.3 0 2.3 1.2 4.3 2.9 5.5-1.1 0-2.1-.3-3-.8v.1c0 3.2 2.3 5.8 5.3 6.4-.6.1-1.1.2-1.7.2-.4 0-.8 0-1.2-.1.8 2.6 3.3 4.5 6.1 4.6-2.2 1.8-5.1 2.8-8.2 2.8-.5 0-1.1 0-1.6-.1 2.9 1.9 6.4 3 10.1 3 12.1 0 18.7-10 18.7-18.7v-.8c1.3-1 2.4-2.2 3.3-3.5z"
+                />
+              </g>
+            </svg>
+            <p class="media-name">Twitter</p>
+            <p class="media-number">10,345</p>
+          </div>
+          <div id="facebook" class="social-media">
+            <svg
+              class="media-svg"
+              height="60"
+              width="60"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g transform="scale(0.75)">
+                <circle cx="40" cy="40" r="40" />
+                <path
+                  transform="translate(12 12)"
+                  fill="green"
+                  d="M40.43 21.739h-7.645v-5.014c0-1.883 1.248-2.322 2.127-2.322h5.395V6.125l-7.43-.029c-8.248 0-10.125 6.174-10.125 10.125v5.518h-4.77v8.53h4.77v24.137h10.033V30.269h6.77l.875-8.53z"
+                />
+              </g>
+            </svg>
+
+            <p class="media-name">Facebook</p>
+            <p class="media-number">8,739</p>
+          </div>
+          <div id="Google+" class="social-media">
+            <svg
+              class="media-svg"
+              height="60"
+              width="60"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g transform="scale(0.75)">
+                <circle cx="40" cy="40" r="40" />
+                <path
+                  transform="translate(20 20) scale(1.25)"
+                  fill="#00f"
+                  d="M17.7 25.7c0-.3 0-.5-.1-.8-.1-.2-.1-.5-.2-.7-.1-.2-.2-.4-.3-.7-.2-.2-.3-.4-.4-.6-.1-.2-.3-.3-.5-.6l-.5-.5c-.1-.1-.3-.3-.6-.5s-.5-.4-.6-.4-.3-.2-.6-.4-.5-.4-.6-.4h-1c-.7 0-1.4 0-2 .1-.7.1-1.4.2-2.1.5-.7.2-1.3.5-1.9.9s-1 .8-1.3 1.4c-.3.6-.5 1.3-.5 2.1 0 .9.2 1.7.7 2.3.5.7 1.1 1.2 1.8 1.6s1.5.7 2.3.9 1.6.3 2.4.3c.8 0 1.5-.1 2.2-.2.7-.2 1.3-.4 1.9-.8.6-.3 1.1-.8 1.4-1.4.3-.6.5-1.3.5-2.1zM15.4 9.1c0-.8-.1-1.6-.3-2.5-.2-.9-.5-1.7-.9-2.5s-.9-1.5-1.6-2c-.7-.5-1.5-.8-2.3-.8-1.2 0-2.1.4-2.8 1.3-.7.9-1 1.9-1 3.2 0 .6.1 1.2.2 1.9s.4 1.3.7 2c.3.7.7 1.3 1.1 1.8.4.5.9 1 1.5 1.3.6.3 1.2.5 1.9.5 1.2 0 2.1-.4 2.7-1.2.5-.7.8-1.7.8-3zM12.9 0h8.4l-2.6 1.5h-2.6c.9.6 1.6 1.4 2.1 2.4S19 6 19 7.1c0 .9-.1 1.8-.4 2.5-.3.7-.7 1.3-1.1 1.8-.4.4-.8.9-1.3 1.2-.4.4-.8.8-1.1 1.2-.3.4-.4.8-.4 1.3 0 .3.1.7.3 1 .2.3.5.6.8.9.3.3.7.6 1.1.9.4.3.8.7 1.2 1.1.4.4.8.8 1.1 1.3.3.5.6 1 .8 1.6.2.6.3 1.3.3 2 0 2.1-.9 3.9-2.7 5.4-1.9 1.7-4.6 2.5-8.1 2.5-.8 0-1.5-.1-2.3-.2-.8-.1-1.6-.3-2.3-.6-.8-.3-1.5-.7-2.1-1.1-.6-.4-1.1-1-1.5-1.7C1 27.6.8 26.9.8 26c0-.8.2-1.6.7-2.6.4-.8 1-1.5 1.8-2.1.8-.6 1.8-1.1 2.8-1.4 1-.3 2-.5 3-.7.9-.1 1.9-.2 2.9-.3-.8-1.1-1.2-2-1.2-2.9v-.5c0-.1.1-.3.1-.4 0-.1.1-.2.2-.4s.1-.3.1-.4c-.5.1-1 .1-1.3.1-1.9 0-3.5-.6-4.9-1.9-1.4-1.3-2-2.8-2-4.7C3 6 3.6 4.4 4.8 3 6 1.7 7.5.8 9.3.4c1.2-.3 2.4-.4 3.6-.4zm19.9 4.9v2.5h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9h4.9z"
+                />
+              </g>
+            </svg>
+            <p class="media-name">Google+</p>
+            <p class="media-number">2,530</p>
+          </div>
+        </div>
+
+        <div id="new-members">
+          <h2>NEW MEMBERS</h2>
+          <div class="container-members">
+            <div id="member-1">
+              <img
+                src="images/member-1.jpg"
+                alt="profile avatar"
+                height="30px"
+                width="30px"
+              />
+
+              <h3>Victoria Chambers</h3>
+              <a href="mailto:victoria.chambers80@example.com"
+                >victoria.chambers80@example.com</a
+              >
+
+              <span>10/15/15</span>
+            </div>
+
+            <div id="member-2">
+              <img
+                src="images/member-2.jpg"
+                alt="profile avatar"
+                height="30px"
+                width="30px"
+              />
+              <h3>Dale Byrd</h3>
+              <a href="mailto:dale.byrd52@example.com"
+                >dale.byrd52@example.com</a
+              >
+              <span>10/15/15</span>
+            </div>
+            <div id="member-3">
+              <img
+                src="images/member-3.jpg"
+                alt="profile avatar"
+                height="30px"
+                width="30px"
+              />
+              <h3>Dawn Wood</h3>
+              <a href="mailto:dawn.wood61@example.com"
+                >dawn.wood61@example.com</a
+              >
+              <span>10/15/15</span>
+            </div>
+            <div id="member-4">
+              <img
+                src="images/member-4.jpg"
+                alt="profile avatar"
+                height="30px"
+                width="30px"
+              />
+              <h3>Dan Oliver</h3>
+              <a href="mailto:dan.oliver82@example.com"
+                >dan.oliver82@example.com</a
+              >
+              <span>10/15/15</span>
+            </div>
+          </div>
+        </div>
+
+        <div id="recent-activity">
+          <h2>NEW MEMBERS</h2>
+          <div class="container-activity">
+            <div id="activity-1">
+              <img
+                src="images/member-1.jpg"
+                alt="profile avatar"
+                height="30px"
+                width="30px"
+              />
+              <p>
+                Victoria Chambers commented on
+                <strong>You App's SEO Tips</strong>
+              </p>
+              <span>4 hours ago</span>
+              <img
+                src="icons/next.png"
+                alt="icon of a right arrow"
+                height="20px"
+                width="20px"
+              />
+            </div>
+            <div id="activity-2">
+              <img
+                src="images/member-2.jpg"
+                alt="profile avatar"
+                height="30px"
+                width="30px"
+              />
+              <p>
+                Dale Byrd liked the post
+                <strong>Facebook's Changes for 2016</strong>
+              </p>
+              <span>5 hours ago</span>
+              <img
+                src="icons/next.png"
+                alt="icon of a right arrow"
+                height="20px"
+                width="20px"
+              />
+            </div>
+            <div id="activity-3">
+              <img
+                src="images/member-3.jpg"
+                alt="profile avatar"
+                height="30px"
+                width="30px"
+              />
+              <p>
+                Dawn Wood commented on
+                <strong>Facebook's Changes for 2016</strong>
+              </p>
+              <span>5 hours ago</span>
+              <img
+                src="icons/next.png"
+                alt="icon of a right arrow"
+                height="20px"
+                width="20px"
+              />
+            </div>
+
+            <div id="activity-4">
+              <img
+                src="images/member-4.jpg"
+                alt="profile avatar"
+                height="30px"
+                width="30px"
+              />
+              <p>
+                Dan Oliver posted
+                <strong>Your App's SEO Tips</strong>
+              </p>
+              <span>1 day ago</span>
+              <img
+                src="icons/next.png"
+                alt="icon of a right arrow"
+                height="20px"
+                width="20px"
+              />
+            </div>
+          </div>
+        </div>
         <div id="message-user">
           <h2>MESSAGE USER</h2>
           <input
@@ -99,9 +303,11 @@
             placeholder="Search for User"
           />
           <textarea
+            name="input-message"
             class="input"
             id="input-message"
             placeholder="Message for User"
+            style="resize: none;"
           >
           </textarea>
           <button type="submit">SEND</button>
