--- a/index.html
+++ b/index.html
@@ -467,12 +467,14 @@
         </div>
         <div id="message-user" class="widget">
           <h2>MESSAGE USER</h2>
+          <!-- <p style="color: red;">Please enter a user below!</p> -->
           <input
             type="text"
             class="input"
             id="input-search"
             placeholder="Search for User"
           />
+          <!-- <p style="color: red;">Please enter a message below!</p> -->
           <textarea
             name="input-message"
             class="input"
@@ -480,7 +482,12 @@
             placeholder="Message for User"
             style="resize: none;"
           ></textarea>
+
+          <!-- <span>Your message was sent</span> -->
           <button type="submit" id="submit" class="submit-message">SEND</button>
+          <!-- <button type="submit" id="submit" class="submit-message">
+            NEW MESSAGE
+          </button> -->
         </div>
         <div id="settings" class="widget">
           <h2>SETTINGS</h2>
@@ -541,7 +548,7 @@
       />
       <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3"></script>
       <script src="js/main.js"></script>
       <script src="js/charts.js"></script>
     </main>
