added user message in Settings widget

--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
         <div id="settings" class="widget">
           <h2>SETTINGS</h2>
           <!-- Rounded toggle switch -->
+          <span id="savings-message"></span>
           <div class="settings-slider">
             <h2>Send Email Notifications</h2>
             <label class="switch">
